@@ -1,179 +1,83 @@
-## 💎 Visão Geral
-
-O **Mercatto Brasil** é um ecossistema de gestão comercial desenvolvido para oferecer robustez técnica com uma experiência de usuário (UX) sofisticada. Inspirado na identidade visual nacional, o sistema combina a agilidade do Java nativo com uma interface premium, entregando controle total sobre o ciclo de vendas e inventário.
-
-> "Tecnologia com DNA brasileiro, performance de padrão."
+# 🇧🇷 Mercatto Brasil: Inteligência Operacional para o Comércio Local
+### Potencializando a gestão de mercados, mercearias e comércios de bairro com tecnologia de ponta.
 
 ---
 
-## 🚀 Diferenciais Estratégicos
+## 💎 A Solução
 
-* **Design System Exclusivo:** Interface baseada em gradientes modernos e componentes customizados para reduzir a fadiga visual.
-* **Zero Dependency Core:** Arquitetura limpa em Java puro, garantindo maior velocidade de execução e facilidade de manutenção.
-* **Inteligência de Estoque:** Algoritmos integrados para monitoramento de baixo estoque e giro de produtos.
-* **Data Export:** Motor de exportação otimizado para formatos `.csv` e `.txt`, facilitando a integração com ferramentas de BI (Excel, PowerBI).
+O **Mercatto Brasil** nasceu para resolver o maior desafio do pequeno e médio empreendedor: **o controle total do negócio sem complicação.** Muitos mercados e mercearias perdem dinheiro por falta de visão sobre o estoque ou demora no atendimento. Nossa plataforma foi desenhada para ser o braço direito do comerciante brasileiro, oferecendo uma interface premium que qualquer colaborador consegue operar, unindo a robustez do Java à agilidade que o varejo exige.
+
+> "Tecnologia com DNA brasileiro para transformar o seu comércio em uma operação profissional."
 
 ---
 
-## 🛠️ Stack Tecnológica
+## 🚀 Como ajudamos o seu negócio
 
-O projeto utiliza tecnologias de ponta para garantir estabilidade e escalabilidade:
+* **🛒 PDV Ágil:** Realize vendas de forma instantânea com validação automática de estoque.
+* **📦 Inventário Inteligente:** Chega de surpresas. Monitore produtos com baixo estoque e evite a falta de itens essenciais para seus clientes.
+* **📊 Visão de Dono:** Dashboard intuitivo que mostra em tempo real o que mais vende e como está a saúde financeira da sua loja.
+* **📄 Relatórios Profissionais:** Exporte dados para CSV ou TXT e tenha controle absoluto sobre o histórico de movimentações.
+* **⚡ Interface Antifadiga:** Design moderno com cores institucionais (Verde e Azul Brasil) pensado para quem passa o dia operando o sistema.
+
+---
+
+## 🛠️ Excelência Técnica (Stack)
+
+Para garantir que o sistema nunca trave durante uma venda, utilizamos tecnologias de padrão internacional:
 
 | Camada | Tecnologia | Finalidade |
 | :--- | :--- | :--- |
-| **Linguagem** | Java 17 LTS | Core Business Logic |
-| **Interface** | JavaFX 17 | Interface Gráfica Reativa |
-| **Estilização** | CSS3 (JavaFX Modena) | Design System & Temas |
-| **Build System** | Scripting Manual / JDK | Otimização de Binários |
+| **Motor Principal** | Java 17 LTS | Estabilidade e velocidade de processamento. |
+| **Interface Gráfica** | JavaFX 17 | Experiência visual fluida e moderna. |
+| **Estilização** | CSS Advanced | Identidade visual premium e exclusiva. |
+| **Arquitetura** | MVC Enterprise | Facilidade para futuras atualizações e segurança de dados. |
 
 ---
 
-## 📦 Instalação e Implantação
+## 📦 Guia de Implantação
 
-### Pré-requisitos
-* [Java JDK 17+](https://adoptium.net/)
-* [JavaFX SDK 17+](https://gluonhq.com/products/javafx/) (Configurado nas variáveis de ambiente)
+O sistema foi projetado para ser instalado de forma simples e rápida em qualquer computador.
 
-### Guia Rápido de Configuração
+### 1. Pré-requisitos
+* [Java JDK 17+](https://adoptium.net/) instalado.
+* [JavaFX SDK 17+](https://gluonhq.com/products/javafx/) configurado.
 
-1. **Clonagem do Repositório**
-   ```bash
-   git clone [https://github.com/seu-usuario/mercatto-brasil.git](https://github.com/seu-usuario/mercatto-brasil.git)
-   cd mercatto-brasil
+### 2. Passo a Passo
+```bash
+# Clone o projeto para sua máquina
+git clone [https://github.com/seu-usuario/mercatto-brasil.git](https://github.com/seu-usuario/mercatto-brasil.git)
+cd mercatto-brasil
 
-
-   Compilação do Sistema
-Para sua conveniência, utilize o compilador automatizado ou execute manualmente:
-
-Bash
-# Compilação via Script (Recomendado)
-./scripts/compilar.bat
-
-# Manual
-javac -d bin --module-path %PATH_TO_FX% --add-modules javafx.controls,javafx.fxml src/br/com/marketplace/**/*.java
-Execução
-
-Bash
-./scripts/executar.bat
-
-
-O Gemini disse
-Para elevar o nível do seu projeto Mercatto Brasil, transformei o README em uma documentação de nível "Enterprise". Foquei em uma linguagem mais executiva, organizei a hierarquia visual com tabelas e badges, e melhorei a seção de instalação para parecer um guia de implantação profissional.
-
-Aqui está o código completo para o seu README.md:
-
-Markdown
-# 🇧🇷 Mercatto Brasil: Gestão Comercial de Alta Performance
-
-<div align="center">
-  <img src="https://via.placeholder.com/1000x300/002776/ffffff?text=MERCATTO+BRASIL+V2.0" alt="Mercatto Brasil Banner" />
-  
-  [![License: MIT](https://img.shields.io/badge/License-MIT-yellow.svg)](https://opensource.org/licenses/MIT)
-  [![Java Version](https://img.shields.io/badge/Java-17%2B-blue.svg)](https://www.oracle.com/java/)
-  [![JavaFX](https://img.shields.io/badge/UI-JavaFX%2017-orange.svg)](https://openjfx.io/)
-  [![Status](https://img.shields.io/badge/Status-Production--Ready-success.svg)]()
-</div>
-
----
-
-## 💎 Visão Geral
-
-O **Mercatto Brasil** é um ecossistema de gestão comercial desenvolvido para oferecer robustez técnica com uma experiência de usuário (UX) sofisticada. Inspirado na identidade visual nacional, o sistema combina a agilidade do Java nativo com uma interface premium, entregando controle total sobre o ciclo de vendas e inventário.
-
-> "Tecnologia com DNA brasileiro, performance de padrão internacional."
-
----
-
-## 🚀 Diferenciais Estratégicos
-
-* **Design System Exclusivo:** Interface baseada em gradientes modernos e componentes customizados para reduzir a fadiga visual.
-* **Zero Dependency Core:** Arquitetura limpa em Java puro, garantindo maior velocidade de execução e facilidade de manutenção.
-* **Inteligência de Estoque:** Algoritmos integrados para monitoramento de baixo estoque e giro de produtos.
-* **Data Export:** Motor de exportação otimizado para formatos `.csv` e `.txt`, facilitando a integração com ferramentas de BI (Excel, PowerBI).
-
----
-
-## 🛠️ Stack Tecnológica
-
-O projeto utiliza tecnologias de ponta para garantir estabilidade e escalabilidade:
-
-| Camada | Tecnologia | Finalidade |
-| :--- | :--- | :--- |
-| **Linguagem** | Java 17 LTS | Core Business Logic |
-| **Interface** | JavaFX 17 | Interface Gráfica Reativa |
-| **Estilização** | CSS3 (JavaFX Modena) | Design System & Temas |
-| **Build System** | Scripting Manual / JDK | Otimização de Binários |
-
----
-
-## 📦 Instalação e Implantação
-
-### Pré-requisitos
-* [Java JDK 17+](https://adoptium.net/)
-* [JavaFX SDK 17+](https://gluonhq.com/products/javafx/) (Configurado nas variáveis de ambiente)
-
-### Guia Rápido de Configuração
-
-1. **Clonagem do Repositório**
-   ```bash
-   git clone [https://github.com/seu-usuario/mercatto-brasil.git](https://github.com/seu-usuario/mercatto-brasil.git)
-   cd mercatto-brasil
-Compilação do Sistema
-Para sua conveniência, utilize o compilador automatizado ou execute manualmente:
-
-Bash
-# Compilação via Script (Recomendado)
-./scripts/compilar.bat
-
-# Manual
-javac -d bin --module-path %PATH_TO_FX% --add-modules javafx.controls,javafx.fxml src/br/com/marketplace/**/*.java
-Execução
-
-Bash
-./scripts/executar.bat
-💻 Experiência do Usuário (UX)
-Dashboard Inteligente
-O coração do Mercatto Brasil oferece uma visão 360° do seu negócio em segundos.
-
-<div align="center">
-<img src="https://www.google.com/search?q=https://via.placeholder.com/1000x500/009c3b/ffffff%3Ftext%3DInterface%2BDashboard%2BMercatto%2BBrasil" alt="Dashboard" width="90%"/>
-<p><em>Figura 1: Interface principal com processamento de dados em tempo real.</em></p>
-</div>
-
-Atalhos de Produtividade
-Atalho	Destino	Descrição
-Alt + 1	Dashboard	Visão analítica e métricas.
-Alt + 2	Produtos	Catálogo e controle de estoque.
-Alt + 3	Vendas	Terminal de PDV dinâmico.
-Alt + 4	Relatórios	Auditoria e exportação de dados.
-🏗️ Arquitetura de Pastas
-A estrutura segue o padrão MVC (Model-View-Controller) para facilitar a expansão do sistema:
+🏗️ Estrutura do Ecossistema
+Organização pensada na escalabilidade do produto:
 
 Plaintext
 mercatto-brasil/
 ├── src/
 │   └── br/com/marketplace/
-│       ├── model/       # Entidades e Regras de Negócio
-│       ├── service/     # Persistência e Lógica de Processamento
-│       └── view/        # Telas FXML e Controladores de UI
-├── scripts/             # Automação de Build e Deploy
-├── assets/              # Identidade Visual e Ícones
-└── docs/                # Documentação Técnica Adicional
-
-📄 Compliance e Licenciamento
-Este software é licenciado sob a MIT License. Uma licença que permite flexibilidade total para uso comercial e modificações, garantindo que sua empresa tenha total controle sobre a ferramenta.
-
-Copyright (c) 2024 Mercatto Brasil™ - Enterprise Solutions.
+│       ├── model/       # Regras de Negócio (Produtos, Vendas)
+│       ├── service/     # Inteligência e Processamento de Dados
+│       └── view/        # Interface Visual e Experiência do Usuário
+├── scripts/             # Ferramentas de Instalação e Execução
+├── assets/              # Identidade Visual e Recursos Gráficos
+└── docs/                # Manuais de Uso para o Comerciante
 
 
+📄 Compliance e Licença
+Este software é distribuído sob a MIT License. É uma solução aberta para que a comunidade possa contribuir, mas pronta para uso comercial imediato.
 
-🤝 Contato e Suporte
-Danilo - Lead Developer & Architect
+Nota: Todos os direitos reservados à marca Mercatto Brasil™ - 2024.
 
-Para parcerias, suporte customizado ou solicitações de novas funcionalidades:
+👤 Autor e Idealizador
+Danilo Araujo Lead Developer & Architect
 
-👤 Autor
-Danilo Araujo 
-Desenvolvedor Full Stack & UI/UX Designer
+Especialista em criar soluções que aproximam a tecnologia de ponta da realidade do pequeno empreendedor.
 
-LinkedIn | Portfolio | Email
+<img src="https://img.shields.io/badge/LinkedIn-0077B5?style=for-the-badge&logo=linkedin&logoColor=white" />
+<img src="https://img.shields.io/badge/Email-D14836?style=for-the-badge&logo=gmail&logoColor=white" />
+
+<div align="center">
+<sub>Mercatto Brasil: O sistema de quem faz o Brasil acontecer.</sub>
+</div>
+# Execute o instalador automático (Recomendado)
+./scripts/instalar.bat
